CHANGELOG for Fall of Eden
--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.3w
------------
* Vena restoration added. You need to find the scepter and bring it to Ophelia. If you've already defeated Lagon, the scene should still trigger.
* Lagon scenes added:
 - Talk scenes
* Added several Save locations:
 - Outlaws camp
 - Dryad's glade
 - Jeanne's tower
* GUI change: defeated enemies have their portraits faded. Report if this causes graphics glitches on some browsers.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.3v2
-------------
* Fixed a bug in Terry save format

Version 0.3v
------------
* Fixed a bug in Terry vag scene.
* Tweaked Estros/Testos so that growth/shrinking is more of a sliding scale.
* Added scenes for Ophelia:
 - Talk (multiple topics), written by QB and LD and me.
 - Sex - vaginal fuck, written by QB and LD.
* Fixed a bug in the sermon spell.
* Restructured the save format a bit to account for stretch/capacity on some NPCs. This may have some side effects, such as Terry's body resetting the first time you load an old save.
* New Miranda scene:
 - Dommy Miranda, have her ride you.
* New location descriptors for a lot of locations, replacing a lot of placeholder stuff. If you see any that I've missed (and I know there are a few), feel free to point them out in the comments.

Version 0.3u
------------
* Fixed a bug in mothgirl, the "first meeting" flag was flipped the wrong way.
* Fixed a bug in Roa, where it was possible to lock yourself out of getting the scepter.
* Fixed a bug when fighting named mobs that later join you (Terry, mainly).
* Restructuring of Equip GUI. More to come.
* New scenes for the lizards, written by me:
 - A new loss scene for the female.
 - A new win scene for the female.